<resources>
    <string name="app_name">HackDaySamples</string>
    <string name="search_query">Search for movies..</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="placeholder_year">Placeholder year</string>
    <string name="details">Details</string>
    <string name="title">Title:</string>
    <string name="year">Year:</string>
    <string name="director">Director:</string>
    <string name="plot">Plot:</string>
    <string name="languages">Languages:</string>
    <string name="actors">Actors:</string>
    <string name="writers">Writers:</string>
    <string name="genre">Genre:</string>
</resources>
